	- aggregate system includes into system.h.
	- rearrange functions to minimize exported routines in librpmbuild API.
	- generalize cpio I/O to eliminate pipe to exec'd gzip on install.
	- add {init,add,expand}Macro args everywhere (new macro.c compatibility)
	- add new fully recursive macro.c
	- there must be a { between two % in a query format (unless %% is used)

2.5.5 -> 2.5.6:
	- attempt ftp ABOR on query/verify url's.
	- cache open ftp control descriptor with password.
	- verify needed same realpath semantics as query.
	- plug fd leak in urlGetFile().
	- translate cpio errors using cpioStrerror.
	- display "..?....." rather than "..5....." for unreadable files.
	- run time (rather than compile time) host endian check.
	- caldera patches (ray@Caldera.DE)
	- added ARM patches.
	- fix incorrect directory permissions using %attr/%defattr.
	- permit "rpm -q --specfile ... file.spec" queries.
	- strncasecmp on spec file separators (KDE has %Description).
	- remove redundant md5 computation on uninstall.
	- permit --rmsource --force even if sources/patches are missing.
	- don't compute md5sum on non-file %config objects. (from Jos Vos)
	- check arch only on RPMBUILD_{PREP,BUILD,INSTALL,PACKAGEBINARY}.
	- configure.in: set default value for RPM. (Tim Mooney)
	- add new Epoch: keyword just like Serial:.
	- update Russian translation w man pages.
	- solaris: don't attempt static link. (Tim Mooney)
	- fix: timeCheck in rpm.c should be unsigned long. (Tim Mooney)
	- osf: prov searches only shared libraries. (Tim Mooney)
	- solaris: set PATH in prov/req scripts. (Tim Mooney)
	- fix: ignore modes on symlinks. (Tim Mooney)
	- sub-packages inherit RPMTAG_EPOCH (just like RPMTAG_VERSION/RELEASE).
	- fix off-by-1 alloca that prevented relocating /.
	- there must be a { between two % in a query format (unless %% is
	  used).

2.5.4 -> 2.5.5:
	- permit rpm to be built in a sub-directory (--srcdir=DIR).
	- return CPIO_BAD_HEADER instead of exiting. (Scott M. Stone)