@@ -38,6 +38,7 @@
 	- there must be a { between two % in a query format (unless %% is used)
 
 2.5.5 -> 2.5.6:
+	- ultrapenguin 1.1.9 sparc64 changes.
 	- attempt ftp ABOR on query/verify url's.
 	- cache open ftp control descriptor with password.
 	- verify needed same realpath semantics as query.
